# xmlsigned

./: README.md  meson.build
src/Classes/: SBXmlSigner.vala
src/ccode/: functions.c
test/: signer-test.vala
